--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 		"zod": "^3.24.1"
 	},
 	"dependencies": {
+		"@auth/sveltekit": "^1.7.4",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tanstack/table-core": "^8.20.5"
 	}
