--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
 	},
 	"dependencies": {
 		"@auth/sveltekit": "^1.7.4",
+		"@tailwindcss/container-queries": "^0.1.1",
+		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tanstack/table-core": "^8.20.5"
 	}
