--- a/package.json
+++ b/package.json
@@ -60,9 +60,13 @@
 	},
 	"dependencies": {
 		"@auth/sveltekit": "^1.7.4",
+		"@kubernetes/client-node": "^1.0.0",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
-		"@tanstack/table-core": "^8.20.5"
+		"@tanstack/table-core": "^8.20.5",
+		"pg": "^8.13.1",
+		"pg-hstore": "^2.3.4",
+		"sequelize": "^6.37.5"
 	}
 }
