--- a/package.json
+++ b/package.json
@@ -73,10 +73,13 @@
 		"svelte-check": "^4.0.0",
 		"svelte-sonner": "^0.3.28",
 		"svelte-tiptap": "^2.1.0",
+		"sveltekit-sse": "^0.13.12",
 		"sveltekit-superforms": "^2.21.1",
 		"tailwind-merge": "^2.5.5",
 		"tailwind-variants": "^0.3.0",
 		"tailwindcss": "^3.4.9",
+		"tiptap-extension-auto-joiner": "^0.1.3",
+		"tiptap-extension-global-drag-handle": "^0.1.16",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"undici": "^6.21.0",
