--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"undici": "^6.21.0",
+		"vaul-svelte": "^1.0.0-next.3",
 		"vite": "^6.0.0",
 		"vitest": "^2.0.4",
 		"zod": "^3.24.1"
