--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 		"globals": "^15.0.0",
 		"lowlight": "^3.3.0",
 		"lucide-svelte": "^0.468.0",
+		"mdsvex": "^0.12.5",
 		"mode-watcher": "^0.5.0",
 		"pdfjs-dist": "^4.9.155",
 		"prettier": "^3.3.2",
@@ -99,6 +100,7 @@
 		"@tanstack/table-core": "^8.20.5",
 		"@types/reveal.js": "^5.0.5",
 		"marked": "^15.0.6",
+		"ollama": "^0.5.15",
 		"pg": "^8.13.1",
 		"pg-hstore": "^2.3.4",
 		"reveal.js": "^5.2.1",
