--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
 		"@tanstack/table-core": "^8.20.5",
 		"@types/reveal.js": "^5.0.5",
 		"marked": "^15.0.6",
+		"mermaid": "^11.6.0",
 		"ollama": "^0.5.15",
 		"pg": "^8.13.1",
 		"pg-hstore": "^2.3.4",
