feat: Added Retrieval authenticatedgemented Generation implementation to the application

--- a/package.json
+++ b/package.json
@@ -102,9 +102,7 @@
 		"marked": "^15.0.6",
 		"mermaid": "^11.6.0",
 		"ollama": "^0.5.15",
-		"pg": "^8.13.1",
-		"pg-hstore": "^2.3.4",
-		"reveal.js": "^5.2.1",
-		"sequelize": "^6.37.5"
+		"pg": "^8.16.0",
+		"reveal.js": "^5.2.1"
 	}
 }
