--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"@types/dateformat": "^5.0.2",
 		"@types/node": "^22.10.1",
 		"@types/novnc__novnc": "^1.5.0",
+		"@types/prismjs": "^1.26.5",
 		"@xterm/addon-attach": "^0.11.0",
 		"@xterm/addon-fit": "^0.10.0",
 		"@xterm/xterm": "^5.5.0",
@@ -93,6 +94,7 @@
 		"@auth/sveltekit": "^1.7.4",
 		"@fontsource/jetbrains-mono": "^5.2.5",
 		"@fontsource/manrope": "^5.2.5",
+		"@humanspeak/svelte-markdown": "^0.8.7",
 		"@kubernetes/client-node": "^1.0.0",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
@@ -103,6 +105,7 @@
 		"mermaid": "^11.6.0",
 		"ollama": "^0.5.15",
 		"pg": "^8.16.0",
+		"prismjs": "^1.30.0",
 		"reveal.js": "^5.2.1"
 	}
 }
